small changes, required README info

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -26,17 +26,17 @@
       <br>
 
       <h1>Put a Star for sale</h1>
-      <br><label for="starPrice">Star Name:</label><input type="number" id="starPrice"></input>
+      <br><label for="starPrice">Star Price:</label><input type="text" id="starPrice"></input>
       <br><label for="priceStarId">Star ID:</label><input type="text" id="priceStarId"></input>
       <br><br><button id="putStarUpForSale" onclick="App.putStarUpForSale()">Put for sale</button>
       <br>
       <hr>
       <br>
 
-      <h1>Approve address</h1>
+      <h1>Approve address to buy star</h1>
 
       <br><label for="starToBeApprovedId">Star ID:</label><input type="text" id="starToBeApprovedId"></input>
-      <br><label for="approvedAddress">New owner address:</label><input type="text" id="approvedAddress"></input>
+      <br><label for="approvedAddress">Approved address:</label><input type="text" id="approvedAddress"></input>
       <br><br><button id="approveStar" onclick="App.approveStar()">Approve Star</button>
       <br>
       <hr>
